--- a/.github/workflows/lab3.yaml
+++ b/.github/workflows/lab3.yaml
@@ -28,4 +28,4 @@ jobs:
     - name: Run test
       run: |
         cd ./src/raft
-        python3 judge.py --count 200 --pattern 'TestSnapshotInstall3D' --race
+        python3 judge.py --count 20 --pattern '3[ABCD]$' --race
