remove race detector for lab4, it is too slow for speed test

--- a/.github/workflows/judge.yaml
+++ b/.github/workflows/judge.yaml
@@ -55,4 +55,5 @@ jobs:
     - name: Run test
       run: |
         cd ./src/kvraft
-        python3 judge.py --count 20 --pattern '4A' --race --telegram-token ${{ secrets.TELEGRAM_TOKEN }} --telegram-chatid ${{ secrets.TELEGRAM_CHATID }}
+        # race flag is tooo slow for speed test of 4A
+        python3 judge.py --count 20 --pattern '4A' --telegram-token ${{ secrets.TELEGRAM_TOKEN }} --telegram-chatid ${{ secrets.TELEGRAM_CHATID }}
