--- a/.github/workflows/judge.yaml
+++ b/.github/workflows/judge.yaml
@@ -55,5 +55,4 @@ jobs:
     - name: Run test
       run: |
         cd ./src/kvraft
-        # race flag is tooo slow for speed test of 4A
-        python3 judge.py --count 20 --pattern '4A' --telegram-token ${{ secrets.TELEGRAM_TOKEN }} --telegram-chatid ${{ secrets.TELEGRAM_CHATID }}
+        python3 judge.py --count 20 --pattern '4[AB]$' --race --telegram-token ${{ secrets.TELEGRAM_TOKEN }} --telegram-chatid ${{ secrets.TELEGRAM_CHATID }}
