update auto-judge script

--- a/.github/workflows/judge.yaml
+++ b/.github/workflows/judge.yaml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Run test
       run: |
-        cd ./raft
+        cd ./src
         python3 judge.py --target lab3 --count 20 --pattern '3[ABCD]$' --race --telegram-token ${{ secrets.TELEGRAM_TOKEN }} --telegram-chatid ${{ secrets.TELEGRAM_CHATID }}
   
   lab4:
@@ -54,5 +54,5 @@ jobs:
     
     - name: Run test
       run: |
-        cd ./src/kvraft
+        cd ./src
         python3 judge.py --target lab4 --count 20 --pattern '4[AB]$' --race --telegram-token ${{ secrets.TELEGRAM_TOKEN }} --telegram-chatid ${{ secrets.TELEGRAM_CHATID }}
